package app.domain.model;

public class Administrator {
}
